--- a/.github/workflows/LinuxContainerBuild_PulumiRunnerImage.yaml
+++ b/.github/workflows/LinuxContainerBuild_PulumiRunnerImage.yaml
@@ -47,7 +47,7 @@ jobs:
     - name: Setup Docker Buildx
       uses: docker/setup-buildx-action@v1.5.1
 
-    - name: Build Image | koffer:latest
+    - name: Build Image | ghcr.io/${{ github.actor  }}/${{ github.workflow  }}
       uses: docker/build-push-action@v2.6.1
       with:
         context: ./${{ github.workflow }}
