update nodejs from 10 to 12
Signed-off-by: usrbinkat <usrbinkat@braincraft.io>

--- a/pulumi-runner/Dockerfile
+++ b/pulumi-runner/Dockerfile
@@ -44,7 +44,7 @@ ARG DNF_FLAGS_EXTRA="\
 # Build Rootfs
 RUN set -ex \
      && mkdir -p ${BUILD_PATH}                                                  \
-     && dnf -y module enable nodejs                                             \
+     && dnf -y module enable nodejs:12                                          \
      && dnf install ${DNF_FLAGS_EXTRA} ${DNF_LIST}                              \
      && dnf clean all ${DNF_FLAGS}                                              \
      && cp -f /etc/yum.repos.d/ubi.repo ${BUILD_PATH}/etc/yum.repos.d/ubi.repo  \
