--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -13,7 +13,7 @@ jobs:
           pulumi up --stack KongOnEKS --yes --cwd /pulumi/pulumi --non-interactive ;\
           echo;
     container:
-      image: ghcr.io/${{ github.actor }}/${{ github.workflow }}:latest
+      image: ghcr.io/${{ github.actor }}/pulumi-runner:latest
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
