--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -10,6 +10,8 @@ jobs:
       - name: Pulumi Runner Deploy
         run: |
           set -ex ;\
+          printenv ;\
+          pwd ;\
           pulumi up --stack KongOnEKS --yes --cwd /pulumi/pulumi --non-interactive ;\
           echo;
     container:
@@ -19,5 +21,5 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
       volumes:
-        - ../../${{ github.action_path }}:/pulumi
+        - .:/pulumi
       options: --cpus 1
