--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,26 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-    - name: Linux Container Build | Pulumi Runner Image
-      uses: peter-evans/repository-dispatch@v1.1.3
-      with:
-        event-type: pulumi-runner-build
-        token: ${{ secrets.GH_ACTIONS_TOKEN }}
-        repository: ${{ github.repository }}
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+#   - name: Linux Container Build | Pulumi Runner Image
+#     uses: peter-evans/repository-dispatch@v1.1.3
+#     with:
+#       event-type: pulumi-runner-build
+#       token: ${{ secrets.GH_ACTIONS_TOKEN }}
+#       repository: ${{ github.repository }}
+#       client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+    - name: Pulumi Runner Deploy
+      run: |
+        set -ex ;\
+        pwd ;\
+        ls -lah ;\
+        pulumi up --stack KongOnEKS --yes --cwd /pulumi/pulumi --non-interactive ;\
+        echo;
+    container:
+      image: ghcr.io/${{ github.actor }}/pulumi-runner:latest
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+      options: "--volume $(pwd):/pulumi --cpus 2"
+#     volumes:
+#       - .:/pulumi
