--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,5 +40,5 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
       options: "--cpus 2"
-#     volumes:
-#       - .:/pulumi
+      volumes:
+        - ${{ env.GITHUB_ACTION_PATH }}:/pulumi
