--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,9 @@ jobs:
         pwd ;\
         ls -lah ;\
         docker run -t --rm --pull always \
-            -v ${PWD}:/pulumi:z \
             --entrypoint pulumi \
             --workdir /pulumi \
+            --volume $(pwd):/pulumi \
           ghcr.io/usrbinkat/pulumi-runner \
             up --stack KongOnEKS --yes --cwd /pulumi/pulumi --non-interactive ;\
         echo;
