--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,10 @@ jobs:
 #       token: ${{ secrets.GH_ACTIONS_TOKEN }}
 #       repository: ${{ github.repository }}
 #       client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+    - name: Git Checkout
+      uses: actions/checkout@v2.3.4
+      with:
+        ref: ${{ github.event.client_payload.sha }}
     - name: Pulumi Runner Deploy
       run: |
         set -ex ;\
