--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,23 +31,24 @@ jobs:
       with:
         ref: ${{ github.event.client_payload.sha }}
     - name: Pulumi Runner Deploy
-      run: |
-        set -ex ;\
-        pwd ;\
-        ls -lah ;\
-        docker run -t --rm --pull always \
-            --entrypoint pulumi \
-            --workdir /pulumi \
-            --volume $(pwd):/pulumi \
-          ghcr.io/usrbinkat/pulumi-runner \
-            up --stack KongOnEKS --yes --cwd /pulumi/pulumi --non-interactive ;\
-        echo;
-#    container:
-#      image: ghcr.io/${{ github.actor }}/pulumi-runner:latest
-#      env:
-#        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-#      options: "--cpus 2"
-#      volumes:
-#        - ${{ github.GITHUB_ACTION_PATH }}:/pulumi
+      run: pulumi up --stack KongOnEKS --yes --cwd ./pulumi --non-interactive
+        #        set -ex ;\
+        #        pwd ;\
+        #        ls -lah ;\
+        #        docker run -t --rm --pull always \
+        #            --entrypoint pulumi \
+        #            --workdir /pulumi \
+        #            --volume $(pwd):/pulumi \
+        #            -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
+        #            -e PULUMI_ACCESS_TOKEN="${{ secrets.PULUMI_ACCESS_TOKEN }}" \
+        #            -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
+        #          ghcr.io/usrbinkat/pulumi-runner \
+        #            up --stack KongOnEKS --yes --cwd /pulumi/pulumi --non-interactive ;\
+        #        echo;
+    container:
+      image: ghcr.io/${{ github.actor }}/pulumi-runner:latest
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+      options: "--cpus 2"
