--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -2,24 +2,22 @@ name: pulumi-deploy
 on:
   repository_dispatch:
     types: [pulumi-runner-deploy]
-
 jobs:
   deploy:
     runs-on: ubuntu-20.04
-    steps:
-      - name: Pulumi Runner Deploy
-        run: |
-          set -ex ;\
-          pwd ;\
-          ls -lah ;\
-          pulumi up --stack KongOnEKS --yes --cwd /pulumi/pulumi --non-interactive ;\
-          echo;
     container:
       image: ghcr.io/${{ github.actor }}/pulumi-runner:latest
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-      options: "--volume $(pwd):/pulumi --cpus 2"
-#     volumes:
-#       - .:/pulumi
+      options: "--cpus 2"
+    steps:
+    - name: Git Checkout
+      uses: actions/checkout@v2.3.4
+      with:
+        ref: ${{ github.event.client_payload.sha }}
+    - name: Pulumi Runner Deploy
+      run: |
+        set -ex ; cd $(pwd)/pulumi \
+        && npm install && pulumi up --stack KongOnEKS --yes --non-interactive
