--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,5 @@
 name: Workflow Dispatcher
 on:
-  schedule:
-    - cron: '0 1 * * *'
   push:
     paths-ignore:
     - 'docs/**'
@@ -19,40 +17,10 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
-#   - name: Linux Container Build | Pulumi Runner Image
-#     uses: peter-evans/repository-dispatch@v1.1.3
-#     with:
-#       event-type: pulumi-runner-build
-#       token: ${{ secrets.GH_ACTIONS_TOKEN }}
-#       repository: ${{ github.repository }}
-#       client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
-    - name: Git Checkout
-      uses: actions/checkout@v2.3.4
+    - name: Linux Container Build | Pulumi Runner Image
+      uses: peter-evans/repository-dispatch@v1.1.3
       with:
-        ref: ${{ github.event.client_payload.sha }}
-    - name: Pulumi Runner Deploy
-      run: |
-        set -ex ;\
-        cd $(pwd)/pulumi ;\
-        npm install ;\
-        pulumi up --stack KongOnEKS --yes --non-interactive
-        #        set -ex ;\
-        #        pwd ;\
-        #        ls -lah ;\
-        #        docker run -t --rm --pull always \
-        #            --entrypoint pulumi \
-        #            --workdir /pulumi \
-        #            --volume $(pwd):/pulumi \
-        #            -e AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" \
-        #            -e PULUMI_ACCESS_TOKEN="${{ secrets.PULUMI_ACCESS_TOKEN }}" \
-        #            -e AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" \
-        #          ghcr.io/usrbinkat/pulumi-runner \
-        #            up --stack KongOnEKS --yes --cwd /pulumi/pulumi --non-interactive ;\
-        #        echo;
-    container:
-      image: ghcr.io/${{ github.actor }}/pulumi-runner:latest
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-      options: "--cpus 2"
+        event-type: pulumi-runner-build
+        token: ${{ secrets.GH_ACTIONS_TOKEN }}
+        repository: ${{ github.repository }}
+        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
