add eks cluster
Signed-off-by: usrbinkat <usrbinkat@braincraft.io>

--- a/pulumi/package.json
+++ b/pulumi/package.json
@@ -7,6 +7,6 @@
         "@pulumi/pulumi": "^3.0.0",
         "@pulumi/aws": "^4.0.0",
         "@pulumi/awsx": "^0.30.0",
-        "@pulumi/eks": ""
+        "@pulumi/eks": "^0.31.0"
     }
 }
