--- a/.github/workflows/PulumiRunnerBuild.yml
+++ b/.github/workflows/PulumiRunnerBuild.yml
@@ -48,12 +48,12 @@ jobs:
           varrundate=${{ env.varrundate }}
           varverpulumi=${{ env.varverpulumi }}
           varverkubectl=${{ env.varverkubectl }}
-
-    - name: Trigger Pulumi Deploy
-      if: success()
-      uses: peter-evans/repository-dispatch@v1.1.3
-      with:
-        event-type: pulumi-runner-deploy
-        token: ${{ secrets.GH_ACTIONS_TOKEN }}
-        repository: ${{ github.repository }}
-        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
+          #
+          #    - name: Trigger Pulumi Deploy
+          #      if: success()
+          #      uses: peter-evans/repository-dispatch@v1.1.3
+          #      with:
+          #        event-type: pulumi-runner-deploy
+          #        token: ${{ secrets.GH_ACTIONS_TOKEN }}
+          #        repository: ${{ github.repository }}
+          #        client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
