suppress sensitive outputs
Signed-off-by: usrbinkat <usrbinkat@braincraft.io>

--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -22,7 +22,7 @@ jobs:
         set -x;
         cd $(pwd)/pulumi;
         npm install;
-        pulumi up --stack KongOnEKS --yes --non-interactive;
+        pulumi up --stack KongOnEKS --yes --non-interactive --suppress-outputs;
         pulumi stack --stack KongOnEKS output kubeconfig | tee /tmp/kubeconfig;
         aws s3 cp /tmp/kubeconfig s3://$(pulumi stack --stack KongOnEKS output adminBucketName);
 
