--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -23,6 +23,6 @@ jobs:
         cd $(pwd)/pulumi;
         npm install;
         pulumi up --stack KongOnEKS --yes --non-interactive --suppress-outputs;
-        pulumi stack --stack KongOnEKS output kubeconfig | tee /tmp/kubeconfig;
-        aws s3 cp /tmp/kubeconfig s3://$(pulumi stack --stack KongOnEKS output adminBucketName)/kubeconfig;
+#       pulumi stack --stack KongOnEKS output kubeconfig | tee /tmp/kubeconfig;
+#       aws s3 cp /tmp/kubeconfig s3://$(pulumi stack --stack KongOnEKS output adminBucketName)/kubeconfig;
 
