test working s3 kubeconfig upload
Signed-off-by: usrbinkat <usrbinkat@braincraft.io>

--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -26,4 +26,4 @@ jobs:
     - name: Pulumi Runner Pull .kube/config for subsequent tasks
       run: "cat /root/.kube/config"
     - name: Pulumi Runner Test .kube/config
-      run: "kubectl get nodes"
+      run: "KUBECONFIG=/root/.kube/config kubectl get nodes"
