--- a/.github/workflows/PulumiRunnerBuild.yml
+++ b/.github/workflows/PulumiRunnerBuild.yml
@@ -1,7 +1,7 @@
 name: pulumi-runner
 on:
   repository_dispatch:
-    types: [pulumi-runner-build]
+    types: [runner-image-build]
 
 jobs:
   build:
@@ -53,7 +53,7 @@ jobs:
       if: success()
       uses: peter-evans/repository-dispatch@v1.1.3
       with:
-        event-type: runner-image-deploy
+        event-type: pulumi-runner-deploy
         token: ${{ secrets.GH_ACTIONS_TOKEN }}
         repository: ${{ github.repository }}
         client-payload: '{"ref": "${{ github.ref }}", "sha": "${{ github.sha }}"}'
