--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -24,7 +24,9 @@ jobs:
         pulumi up --stack KongOnEKS --yes --non-interactive --suppress-outputs;
     - name: Pulumi Runner Pull .kube/config for subsequent tasks
       run: "mkdir -p /root/.kube; cd $(pwd)/pulumi; pulumi stack --stack KongOnEKS output kubeconfig > /root/.kube/config"
-    - name: Pulumi Runner Pull .kube/config for subsequent tasks
-      run: "cat /root/.kube/config"
-    - name: Pulumi Runner Test .kube/config
-      run: "KUBECONFIG=/root/.kube/config kubectl get nodes"
+    - name: Pulumi Runner test aws cli I
+      run: "which aws"
+    - name: Pulumi Runner test aws cli II
+      run: "aws sts get-caller-identity"
+#   - name: Pulumi Runner Test .kube/config
+#     run: "KUBECONFIG=/root/.kube/config kubectl get nodes"
