--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -24,6 +24,8 @@ jobs:
         pulumi up --stack KongOnEKS --yes --non-interactive --suppress-outputs;
     - name: Pulumi Runner Pull .kube/config for subsequent tasks
       run: "mkdir -p /root/.kube; cd $(pwd)/pulumi; pulumi stack --stack KongOnEKS output kubeconfig > /root/.kube/config"
+    - name: Print PATH env var
+      run: "echo $PATH"
     - name: Pulumi Runner test aws cli I
       run: "which aws"
     - name: Pulumi Runner test aws cli II
