--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -25,6 +25,8 @@ jobs:
         pulumi up --stack KongOnEKS --yes --non-interactive --suppress-outputs;
     - name: Pulumi Runner Pull .kube/config for subsequent tasks
       run: "mkdir -p /root/.kube; cd $(pwd)/pulumi; pulumi stack --stack KongOnEKS output kubeconfig > /root/.kube/config"
+    - name: Cat kubeconfig
+      run: "KUBECONFIG=/root/.kube/config cat $KUBECONFIG"
     - name: Print PATH env var
       run: "echo $PATH"
     - name: Test resolve
