--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -25,6 +25,8 @@ jobs:
         pulumi up --stack KongOnEKS --yes --non-interactive --suppress-outputs;
     - name: Pulumi Runner Pull .kube/config for subsequent tasks
       run: "mkdir -p /root/.kube; cd $(pwd)/pulumi; pulumi stack --stack KongOnEKS output kubeconfig > /root/.kube/config"
+    - name: Pulumi Runner Test .kube/config
+      run: "KUBECONFIG=/root/.kube/config kubectl -v 8 get nodes"
     - name: Cat kubeconfig
       run: "KUBECONFIG=/root/.kube/config cat $KUBECONFIG"
     - name: Print PATH env var
@@ -32,6 +34,4 @@ jobs:
     - name: Test resolve
       run: "curl -L https://sts.amazonaws.com/ -s &>/dev/null ; echo $?"
     - name: Pulumi Runner test aws cli II
-      run: "/usr/local/bin/aws sts get-caller-identity"
-#   - name: Pulumi Runner Test .kube/config
-#     run: "KUBECONFIG=/root/.kube/config kubectl get nodes"
+      run: "/usr/local/bin/aws sts get-caller-identity --debug"
