--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -25,13 +25,13 @@ jobs:
         pulumi up --stack KongOnEKS --yes --non-interactive --suppress-outputs;
     - name: Pulumi Runner Pull .kube/config for subsequent tasks
       run: "mkdir -p /root/.kube; cd $(pwd)/pulumi; pulumi stack --stack KongOnEKS output kubeconfig > /root/.kube/config"
-    - name: Pulumi Runner Test .kube/config
-      run: "KUBECONFIG=/root/.kube/config kubectl -v 8 get nodes"
     - name: Cat kubeconfig
       run: "KUBECONFIG=/root/.kube/config cat $KUBECONFIG"
     - name: Print PATH env var
       run: "echo $PATH"
     - name: Test resolve
-      run: "curl -L https://sts.amazonaws.com/ -s &>/dev/null ; echo $?"
+      run: "curl -kL https://93f8596c7b427ddd191981bf8559c6b4.gr7.us-east-1.eks.amazonaws.com/api?timeout=32s &>/dev/null ; echo $?"
     - name: Pulumi Runner test aws cli II
       run: "/usr/local/bin/aws sts get-caller-identity --debug"
+    - name: Pulumi Runner Test .kube/config
+      run: "KUBECONFIG=/root/.kube/config kubectl -v 8 get nodes"
