--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -9,30 +9,29 @@ jobs:
     container:
       image: ghcr.io/${{ github.actor }}/pulumi-runner:latest
       env:
-        PATH: /root/.local/bin:/root/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
         AWS_REGION: us-east-1
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+        PATH: /root/.local/bin:/root/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
       options: "--cpus 2"
     steps:
+
     - name: Git Checkout
       uses: actions/checkout@v2.3.4
       with:
         ref: ${{ github.event.client_payload.sha }}
+
+    - name: Pulumi Runner test aws cli II
+      run: "/usr/local/bin/aws sts get-caller-identity"
+
     - name: Pulumi Runner Deploy
       run: |
         set -x; cd $(pwd)/pulumi; npm install;
         pulumi up --stack KongOnEKS --yes --non-interactive --suppress-outputs;
-    - name: Pulumi Runner Pull .kube/config for subsequent tasks
-      run: "mkdir -p /root/.kube; cd $(pwd)/pulumi; pulumi stack --stack KongOnEKS output kubeconfig > /root/.kube/config"
-    - name: Cat kubeconfig
-      run: "KUBECONFIG=/root/.kube/config cat $KUBECONFIG"
-    - name: Print PATH env var
-      run: "echo $PATH"
-    - name: Test resolve
-      run: "curl -kL https://93f8596c7b427ddd191981bf8559c6b4.gr7.us-east-1.eks.amazonaws.com/api?timeout=32s &>/dev/null ; echo $?"
-    - name: Pulumi Runner test aws cli II
-      run: "/usr/local/bin/aws sts get-caller-identity --debug"
-    - name: Pulumi Runner Test .kube/config
-      run: "KUBECONFIG=/root/.kube/config kubectl -v 8 get nodes"
+
+    - name: Pull .kube/config for subsequent tasks
+      run: "cd $(pwd)/pulumi; pulumi stack --stack KongOnEKS output kubeconfig > /root/.kube/config"
+
+    - name: Test Kubeconfig | get nodes
+      run: "KUBECONFIG=/root/.kube/config kubectl get nodes"
