--- a/.github/workflows/PulumiRunnerDeploy.yml
+++ b/.github/workflows/PulumiRunnerDeploy.yml
@@ -3,13 +3,15 @@ on:
   repository_dispatch:
     types: [pulumi-runner-deploy]
 
+# TODO convert pulumi shell scripts to pulumi/actions@v3 github actions plugin
+# https://www.pulumi.com/docs/guides/continuous-delivery/github-actions/#using-a-different-root-directory
 jobs:
   deploy:
     runs-on: ubuntu-20.04
     container:
       image: ghcr.io/${{ github.actor }}/pulumi-runner:latest
       env:
-        AWS_REGION: us-east-1
+        AWS_REGION: ${{ secrets.AWS_REGION }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
@@ -25,13 +27,21 @@ jobs:
     - name: Pulumi Runner test aws cli II
       run: "/usr/local/bin/aws sts get-caller-identity"
 
+    - name: Install NPM Dependencies
+      run: npm install
+      working-directory: pulumi
+
     - name: Pulumi Runner Deploy
-      run: |
-        set -x; cd $(pwd)/pulumi; npm install;
-        pulumi up --stack KongOnEKS --yes --non-interactive --suppress-outputs;
+      run: pulumi up --stack KongOnEKS --yes --non-interactive --suppress-outputs
+      working-directory: pulumi
 
     - name: Pull .kube/config for subsequent tasks
       run: "cd $(pwd)/pulumi; pulumi stack --stack KongOnEKS output kubeconfig > /root/.kube/config"
 
     - name: Test Kubeconfig | get nodes
       run: "KUBECONFIG=/root/.kube/config kubectl get nodes"
+
+#   - name: Install + Configure Helm
+#     run: |-
+#       curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
+#       helm repo add bitnami https://charts.bitnami.com/bitnami
