push rds status
Signed-off-by: usrbinkat <usrbinkat@braincraft.io>

--- a/pulumi/Pulumi.KongOnEKS.yaml
+++ b/pulumi/Pulumi.KongOnEKS.yaml
@@ -1,2 +1,6 @@
 config:
+  airflow:dbPassword:
+    secure: AAABADsEK3AIjnZPtL+swrWBOFL2jdgXPJKC6onziOKaJ6sD
   aws:region: us-east-1
+  kong:dbPassword:
+    secure: AAABAJ2BQ8rsBBauJ42Xn0TRGEDpdml9zy+z+Mdsx4EaEcX34SXFSA==
